--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 
 <div>
 
-  
+  <div class="jumbotron" style="width:100%">
   {{#if isAuthenticated}}
   	<h1>Welcome to our community</h1>
 
@@ -11,6 +11,8 @@
   {{/if}}
 
   <h1>Home page</h1>
+   </div>
+
   <p>
     <a href = "/contests">See Contests</a>
   </p>
