--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,13 +1,20 @@
-<form action="/users/login" method="POST">
-  <h2 class="form-signin-heading">Please sign in</h2>
-
-  <label for="inputEmail">Email address</label>
-  <input type="email" id="inputEmail" name="email" placeholder="Email address">
-  <br /><br />
-  <label for="inputPassword">Password</label>
-  <input type="password" id="inputPassword" name="password" placeholder="Password">
-
-  <br/>
+<style>
+  .form-control{
+    width:50%
+  }
+</style>  
+<h2 class="form-signin-heading">Please sign in</h2>
+<form class="form-horizontal" action="/users/login" method="POST">
   
-  <button type="submit">Sign in</button>
+   <div class="form-group" >
+  <label class="control-label" for="inputEmail">Email address</label>
+  <input class="form-control" type="email" id="inputEmail" name="email" placeholder="Email address">
+  </div>
+  <div class="form-group" >
+  <label class="control-label"  for="inputPassword">Password</label>
+  <input class="form-control" type="password" id="inputPassword" name="password" placeholder="Password">
+
+  </div>
+  
+  <button class="btn btn-outline-primary" type="submit">Sign in</button>
 </form>
