--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,42 +1,63 @@
-<form action="/users/register" method="POST">
-  <h2>Register Yourself</h2>
+<style>
+  .form-control{
+    width:50%
+  }
+</style>
+<h2>Register Yourself</h2>
 
-  <label for="inputEmail">Email address</label>
-  <input type="email" id="inputEmail" name="email" placeholder="Email address">
-  <br /><br />
-  <label for="inputUsername">Username</label>
-  <input type="text" id="inputUsername" name="username" placeholder="Username">
-  <br /><br />
-  <label for="role">Role</label>
-  <select name="role" id="role">
+<form class="form-horizontal" action="/users/register" method="POST">
+   
+
+   
+    
+
+  <div class="form-group">
+  <label class="control-label" for="inputEmail">Email address:</label>  
+  <input  class="form-control" type="email" id="inputEmail" name="email" placeholder="Email address">
+  </div>
+  <div class="form-group">
+  <label class="control-label" for="inputUsername">Username:</label>
+  <input class="form-control" type="text" id="inputUsername" name="username" placeholder="Username">
+  </div>
+  <div class="form-group">
+  <label class="control-label" for="role">Role:</label>
+  <select class="form-control" name="role" id="role">
     <option value="user">User</option>
     <option value="admin">Admin</option>
   </select>
-  <br /><br />
-  <label for="inputPassword">Password</label>
-  <input type="password" onkeyup="fn1()" id="inputPassword" name="password" placeholder="Password">
-  <br /><br />
-  <label for="inputConfirmPassword">Confirm Password</label>
-  <input type="password" onkeyup="fn()" id="inputConfirmPassword" name="confirmationPassword" placeholder="Confirm Password">
-  <p id="status"></p>
-  <br /><br />
-  <label for="Contact">Contact</label>
-  <input type="text" id="contact" name="contact" placeholder="Contact">
-  <br /><br />
-  <label for="mode">Language</label>
-  <select class="selectpicker" data-live-search="true" class="form-control" id="mode" onchange="changeMode()">
+  </div>
+<div class="form-group">
+  <label  class="control-label" for="inputPassword">Password:</label>
+  <input class="form-control" type="password" onkeyup="fn1()" id="inputPassword" name="password" placeholder="Password">
+</div>
+  <div class="form-group">
+  <label class="control-label" for="inputConfirmPassword">Confirm Password:</label>
+  <input class="form-control" type="password" onkeyup="fn()" id="inputConfirmPassword" name="confirmationPassword" placeholder="Confirm Password">
+  </div>
+  <div id="status"></div>
+
+  <div class="form-group">
+  <label class="control-label" for="Contact">Contact:</label>
+  <input class="form-control" type="text" id="contact" name="contact" placeholder="Contact">
+  </div>
+  <div class="form-group">
+
+  <label class="control-label" for="mode">Language:</label>
+  <select class="form-control selectpicker" data-live-search="true" id="mode" onchange="changeMode()">
               <option value="C" id="C" selected>C</option>
               <option value="C++" id="C++">C++</option>
               <option value="Java" id="Java">Java</option>
               <option value="Python" id="Python">Python</option>
               <option value="Javascript" id="Javascript">Javasrcipt</option>
     </select>
+
+     </div>
     <input  type="hidden" name="flang" id="flang" value="C"> 
   <input  type="hidden" name="template" placeholder="Contact" value=" ">
 
-  <br/><br/>
 
-  <button type="submit">Sign up</button>
+
+  <button class="btn btn-outline-primary" type="submit">Sign up</button>
 </form>
 
 <script>
@@ -106,9 +127,6 @@
       z.style.color = "green";
     }
   }
-  $(document).ready(function() {
-    $('.selectpicker').selectpicker();
-    $('[data-toggle="tooltip"]').tooltip(); 
-});
+  
     
 </script>
