--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,3 +1,4 @@
 
 <a href = "/admin/addquestion">Add Question</a> <br />
 <a href = "/admin/addcontest">Add Contest</a> <br />
+<a href = "/admin/uploadstatement">Upload Statement and test Cases</a> <br />
