--- a/views/uploadstatement2.handlebars
+++ b/views/uploadstatement2.handlebars
@@ -6,19 +6,19 @@
       <input  class="form-control" type="file" id="statement" name="statement">
     </div>
     <div class="form-group">
-      <label class="control-label" for="eotcs">Example test cases</label>
+      <label class="control-label" for="eotcs">Example test cases Inputs</label>
       <input  class="form-control" type="file" id="eitcs" name="eitcs">
     </div>
     <div class="form-group">
-      <label class="control-label" for="eotcs">Example test cases</label>
+      <label class="control-label" for="eotcs">Example test cases Outputs</label>
       <input  class="form-control" type="file" id="eotcs" name="eotcs">
     </div>
     <div class="form-group">
-      <label class="control-label" for="itcs">Test Cases</label>
+      <label class="control-label" for="itcs">Test Cases Inputs</label>
       <input  class="form-control" type="file" id="itcs" name="itcs" multiple>
     </div>
     <div class="form-group">
-      <label class="control-label" for="otcs">Test Cases</label>
+      <label class="control-label" for="otcs">Test Cases Outputs</label>
       <input  class="form-control" type="file" id="otcs" name="otcs" multiple>
     </div>
     <input class="btn btn-outline-primary" type="submit" value="submit" />
