--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,24 +1,57 @@
 
 <div>
 
-  <div class="jumbotron" style="width:100%">
-  {{#if isAuthenticated}}
-  	<h1>Welcome to our community</h1>
+  <div class="jumbotron text-center" style="width:100%">
 
+  	<h1>Welcome to BiT Legion</h1>
 
-  {{else}}
-  	You can register yourself
-  {{/if}}
-
-  <h1>Home page</h1>
-   </div>
-
-  <p>
-    <a href = "/contests">See Contests</a>
-  </p>
+  </div>
 
   
 
+  
+  <div class="container">
+    <div class="row" style="margin: 20px;">
+      <div class="col-sm-6">
+        <a href = "/contests" style="color:#fff;">
+          <div class = "card bg-dark text-center">
+            <div class="card-body">
+              Contests
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-sm-6">
+        <a href = "/contests" style="color:#fff;">
+          <div class = "card bg-dark text-center">
+            <div class="card-body">
+              Announcements
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="row" style="margin: 20px;">
+      <div class="col-sm-6">
+        <a href = "/contests" style="color:#fff;">
+          <div class = "card bg-dark text-center">
+            <div class="card-body">
+              Discussions
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-sm-6">
+        <a href = "/contests" style="color:#fff;">
+          <div class = "card bg-dark text-center">
+            <div class="card-body">
+              Leaderboard
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
 
 
  
