--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -6,7 +6,7 @@
         overflow-y: scroll;
       }
     </style>
-    <title>Logo and name</title>
+    <title>BiT Legion</title>
 
     
     <script src="/js/jquerycdn.min.js"></script>
@@ -42,7 +42,8 @@
     </div>
 
     <center class ="footer">
-      Jai ho Guro bhai ki
+      Copyright &#169; IIIT Pune 2020-2030<br />
+      A Project by Sarthak Gupta, Piyush Gupta and Gaurav Lathwal
     </center>
 
     
