--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,4 +85,30 @@ a.nav-link:hover:before {
 .footer {
     margin-top: 15px;
     font-size: 13px;
+    font-weight: 599;
+    width: 100%;
+    padding: 20px;
+    background-color: #343a40!important;
+    color: #ffffff;
+    bottom: 0;
+    position: fixed;
+    z-index: 9999;
+}
+
+.card {
+    box-shadow: 0px 0px 7px #000;
+    transition: all 0.2s;
+}
+
+.card:hover {
+    box-shadow: 0px 0px 7px #000;
+    margin: -10px;
+}
+
+.contest-page tr td {
+    height: 50px;
+}
+
+a:hover {
+    text-decoration: none !important;
 }
