--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -5,7 +5,7 @@
 <div>
   
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Logo and Name</a>
+    <a class="navbar-brand" href="/">BiT Legion</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
