--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -31,7 +31,7 @@
     {{> navbar}}
 
     
-    <div class="container body" style="width:80%; box-shadow: 0px 0px 8px grey; padding: 50px">
+    <div class="container body" style="width:80%; box-shadow: 0px 0px 8px grey; padding: 50px; overflow-x:scroll">
       
       {{{body}}}
 
