--- a/views/partials/navcontest.handlebars
+++ b/views/partials/navcontest.handlebars
@@ -9,3 +9,5 @@
     <a class="navca" href="/users/submissions/{{user}}/submissions/1">Submissions</a>
 {{/if}}
 <a class="navca" href="/contests/status/1">Status</a>
+
+<hr color="black" width="100%" style="margin-left:0px" />
