--- a/views/submissions.handlebars
+++ b/views/submissions.handlebars
@@ -44,7 +44,7 @@
         else if(x=="CE"){
             document.getElementById(y).style.color="Orange";
         }
-        else if(x[0] == "w" || x[3] == '-'){
+        else if(x[0] == "w" || x[3] == '-' || x[0] == "T"){
             document.getElementById(y).style.color="red";
         } else {
             document.getElementById(y).style.color="black";
@@ -134,7 +134,7 @@ Page <z id="lpages"></z> of <z id="llasts"></z>
                     else if(x=="CE"){
                         document.getElementById(y).style.color="Orange";
                     }
-                    else if(x[0] == "w" || x[3] == '-'){
+                    else if(x[0] == "w" || x[3] == '-' || x[0] == "T"){
                         document.getElementById(y).style.color="red";
                     } else {
                         document.getElementById(y).style.color="black";
