--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -17,7 +17,7 @@
   <div style="width:100%;background-color:#e9ecef;padding:20px;margin-bottom:50px;">
   <h3>Welcome {{username}}</h3>
   </div>
-  <div class = "container" style="width:90%;">
+  <div class = "container bg-light" style="width:90%;padding:20px">
     <div class = "row">
       <div class = "col-sm-10" style = "text-align: left;">
         <div class = "row">
@@ -67,7 +67,7 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="container" style="margin-top:20px">
     <div class="row">
       <div class="col-sm-6">
         <a href = "/users/submissions/{{username}}/submissions/1" style="color:#fff;">
