--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 
   <div class="jumbotron text-center" style="width:100%">
 
-  	<h1>Welcome to BiT Legion</h1>
+  	<h1 class="display-4">Welcome to BiT Legion</h1>
 
   </div>
 
@@ -25,7 +25,7 @@
         <a href = "/contests" style="color:#fff;">
           <div class = "card bg-dark text-center">
             <div class="card-body">
-              Announcements
+              Discussions/Announcements
             </div>
           </div>
         </a>
@@ -33,10 +33,10 @@
     </div>
     <div class="row" style="margin: 20px;">
       <div class="col-sm-6">
-        <a href = "/contests" style="color:#fff;">
+        <a href = "/contests/status/1" style="color:#fff;">
           <div class = "card bg-dark text-center">
             <div class="card-body">
-              Discussions
+              Status
             </div>
           </div>
         </a>
