--- a/views/status.handlebars
+++ b/views/status.handlebars
@@ -1,10 +1,6 @@
 
 
-<br />
-<br />
-{{> navcontest}}
 
-<br />
 <br />
 
 <style>
@@ -116,10 +112,10 @@ Page <z id="lpage"></z> of <z id="llast"></z>
                         sp.append('\
                             <ul class="pagination justify-content-center">\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/1" value="1"> First </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.prev+'" value="'+res.prev+'"> &laquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.prev+'" value="'+res.prev+'"> Prev </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/'+res.midp+'" value="'+res.midp+'"> '+res.midp+' </a></li>\
                                 <li class="page-item active"><a class="page-link" href = "/contests/status/'+res.page+'" value="'+res.page+'"> '+res.page+' </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.next+'" value="'+res.next+'"> &raquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.next+'" value="'+res.next+'"> Next </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/'+res.mid+'" value="'+res.mid+'"> '+res.mid+' </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/'+res.last+'" value="'+res.last+'"> Last </a></li>\
                             </ul>\
@@ -128,10 +124,10 @@ Page <z id="lpage"></z> of <z id="llast"></z>
                         sp.append('\
                             <ul class="pagination justify-content-center">\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/1" value="1"> First </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.prev+'" value="'+res.prev+'"> &laquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.prev+'" value="'+res.prev+'"> Prev </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/'+res.midp+'" value="'+res.midp+'"> '+res.midp+' </a></li>\
                                 <li class="page-item active"><a class="page-link" href = "/contests/status/'+res.page+'" value="'+res.page+'"> '+res.page+' </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.next+'" value="'+res.next+'"> &raquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.next+'" value="'+res.next+'"> Next </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/'+res.last+'" value="'+res.last+'"> Last </a></li>\
                             </ul>\
                         ');
@@ -141,9 +137,9 @@ Page <z id="lpage"></z> of <z id="llast"></z>
                         sp.append('\
                             <ul class="pagination justify-content-center">\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/1" value="1"> First </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.prev+'" value="'+res.prev+'"> &laquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.prev+'" value="'+res.prev+'"> Prev </a></li>\
                                 <li class="page-item active"><a class="page-link" href = "/contests/status/'+res.page+'" value="'+res.page+'"> '+res.page+' </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.next+'" value="'+res.next+'"> &raquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.next+'" value="'+res.next+'"> Next </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/'+res.mid+'" value="'+res.mid+'"> '+res.mid+' </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/'+res.last+'" value="'+res.last+'"> Last </a></li>\
                             </ul>\
@@ -152,9 +148,9 @@ Page <z id="lpage"></z> of <z id="llast"></z>
                         sp.append('\
                             <ul class="pagination justify-content-center">\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/1" value="1"> First </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.prev+'" value="'+res.prev+'"> &laquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.prev+'" value="'+res.prev+'"> Prev </a></li>\
                                 <li class="page-item active"><a class="page-link" href = "/contests/status/'+res.page+'" value="'+res.page+'"> '+res.page+' </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.next+'" value="'+res.next+'"> &raquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/contests/status/'+res.next+'" value="'+res.next+'"> Next </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/contests/status/'+res.last+'" value="'+res.last+'"> Last </a></li>\
                             </ul>\
                         ');
