--- a/views/submissions.handlebars
+++ b/views/submissions.handlebars
@@ -2,10 +2,6 @@
 
 <br />
 <br />
-{{> navcontest}}
-
-<br />
-<br />
 
 <style>
 
@@ -151,10 +147,10 @@ Page <z id="lpages"></z> of <z id="llasts"></z>
                         sp.append('\
                             <ul class="pagination justify-content-center">\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/1" value="1"> First </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.prev+'" value="'+res.prev+'"> &laquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.prev+'" value="'+res.prev+'"> Prev </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.midp+'" value="'+res.midp+'"> '+res.midp+' </a></li>\
                                 <li class="page-item active"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.page+'" value="'+res.page+'"> '+res.page+' </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.next+'" value="'+res.next+'"> &raquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.next+'" value="'+res.next+'"> Next; </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.mid+'" value="'+res.mid+'"> '+res.mid+' </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.last+'" value="'+res.last+'"> Last </a></li>\
                             </ul>\
@@ -163,10 +159,10 @@ Page <z id="lpages"></z> of <z id="llasts"></z>
                         sp.append('\
                             <ul class="pagination justify-content-center">\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/1" value="1"> First </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.prev+'" value="'+res.prev+'"> &laquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.prev+'" value="'+res.prev+'"> Prev </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.midp+'" value="'+res.midp+'"> '+res.midp+' </a></li>\
                                 <li class="page-item active"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.page+'" value="'+res.page+'"> '+res.page+' </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.next+'" value="'+res.next+'"> &raquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.next+'" value="'+res.next+'"> Next </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.last+'" value="'+res.last+'"> Last </a></li>\
                             </ul>\
                         ');
@@ -176,9 +172,9 @@ Page <z id="lpages"></z> of <z id="llasts"></z>
                         sp.append('\
                             <ul class="pagination justify-content-center">\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/1" value="1"> First </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.prev+'" value="'+res.prev+'"> &laquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.prev+'" value="'+res.prev+'"> Prev </a></li>\
                                 <li class="page-item active"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.page+'" value="'+res.page+'"> '+res.page+' </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.next+'" value="'+res.next+'"> &raquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.next+'" value="'+res.next+'"> Next </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.mid+'" value="'+res.mid+'"> '+res.mid+' </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.last+'" value="'+res.last+'"> Last </a></li>\
                             </ul>\
@@ -187,9 +183,9 @@ Page <z id="lpages"></z> of <z id="llasts"></z>
                         sp.append('\
                             <ul class="pagination justify-content-center">\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/1" value="1"> First </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.prev+'" value="'+res.prev+'"> &laquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.prev+'" value="'+res.prev+'"> Prev </a></li>\
                                 <li class="page-item active"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.page+'" value="'+res.page+'"> '+res.page+' </a></li>\
-                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.next+'" value="'+res.next+'"> &raquo; </a></li>\
+                                <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.next+'" value="'+res.next+'"> Next </a></li>\
                                 <li class="page-item"><a class="page-link" href = "/users/submissions/'+user+'/submissions/'+res.last+'" value="'+res.last+'"> Last </a></li>\
                             </ul>\
                         ');
