--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,7 +114,8 @@ a.nav-link:hover:before {
 }
 
 .card {
-    box-shadow: 0px 0px 7px #000;
+    box-shadow: 0px 0px 10px grey;
+    background: rgb(52, 58, 64) !important;
     transition: all 0.2s;
 }
 
@@ -138,4 +139,14 @@ a:hover {
 
 .quespage-table tr td {
     height: 30px;
+}
+
+.contest-page tr td button {
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.contest-page tr td {
+    font-size: 15px;
 }
