--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,13 +22,20 @@
         </a>
       </div>
       <div class="col-sm-6">
-        <a href = "/contests" style="color:#fff;">
+        
+        <form action="https://iiitp-blog.herokuapp.com/" method="POST">
+           <input type="text" hidden value={{email}} name="email">
+           <input type="text" hidden value={{password}} name="password">
+           <button tyep="submit"> Submit</button>
+
+        </form>
+        {{!-- <a href = "/users/disscussion" style="color:#fff;">
           <div class = "card bg-dark text-center">
             <div class="card-body">
               Discussions/Announcements
             </div>
           </div>
-        </a>
+        </a> --}}
       </div>
     </div>
     <div class="row" style="margin: 20px;">
