--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,20 +22,17 @@
         </a>
       </div>
       <div class="col-sm-6">
-        
-        <form action="https://iiitp-blog.herokuapp.com/" method="POST">
-           <input type="text" hidden value={{email}} name="email">
-           <input type="text" hidden value={{password}} name="password">
-           <button tyep="submit"> Submit</button>
-
-        </form>
-        {{!-- <a href = "/users/disscussion" style="color:#fff;">
+        <form action="https://iiitp-blog.herokuapp.com/login" method="POST">
+          <input type="text" hidden value={{email}} name="email">
+          <input type="text" hidden value={{password}} name="password">
           <div class = "card bg-dark text-center">
             <div class="card-body">
-              Discussions/Announcements
+            
+              <button type="submit" style="color:white;text-decoration:none;"> Discussion</button>
             </div>
           </div>
-        </a> --}}
+        </form>
+        </div>
       </div>
     </div>
     <div class="row" style="margin: 20px;">
